refactor(cli): phase-pipeline-struktur und build-subtasks
- CLI auf cli <phase> <pipeline> [args] umgestellt
- cv in build integriert (cv/css/upload)
- config/profile-Achse entfernt und Doku/Tests angepasst

--- a/composer.json
+++ b/composer.json
@@ -38,20 +38,20 @@
       "Composer\\Config::disableProcessTimeout",
       "php bin/cli run dev"
     ],
-    "cv:build": "php bin/cli cv build",
-    "cv:upload": "php bin/cli cv upload",
+    "cv:build": "php bin/cli build dev cv",
+    "cv:upload": "php bin/cli build dev upload",
     "token:rotate": "php bin/cli token rotate",
-    "captcha:cleanup": "php bin/cli captcha cleanup",
-    "config:get": "php bin/cli config get",
-    "config:compile": "php bin/cli config compile",
-    "config:lint": "php bin/cli config lint",
-    "config:show": "php bin/cli config show",
+    "captcha:cleanup": "php bin/cli captcha dev",
+    "config:get": "php bin/cli config get dev",
+    "config:compile": "php bin/cli config compile dev",
+    "config:lint": "php bin/cli config lint dev",
+    "config:show": "php bin/cli config show dev",
     "test": "phpunit",
     "css:build": "npm run build:css",
-    "build": "php bin/cli build",
+    "build": "php bin/cli build dev",
     "build:dev": "php bin/cli build dev",
     "build:preview": "php bin/cli build preview",
-    "setup": "php bin/cli setup",
+    "setup": "php bin/cli setup dev",
     "setup:dev": "php bin/cli setup dev",
     "setup:preview": "php bin/cli setup preview",
     "tests:smoke": [
